--- a/angularGameReview/src/index.html
+++ b/angularGameReview/src/index.html
@@ -6,6 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="./assets/javascripts/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="./assets/stylesheets/bootstrap.css">
+  <link rel="stylesheet" href="./assets/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/stylesheets/font-awesome.min.css">
 </head>
 <body>
   <app-home-list></app-home-list>
